fix gap and wrap

--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -4,7 +4,7 @@
 
     &__header {
         list-style: none;
-        display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
     }
