--- a/src/styles/components/_article-info.scss
+++ b/src/styles/components/_article-info.scss
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: $space-s;
+    column-gap: $space-s;
 
     &::before {
         content: '';
@@ -23,7 +23,7 @@
 
     &__module {
         display: flex;
-        gap: $space-s;
+        column-gap: $space-s;
     }
 
     &__author {
