--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -13,7 +13,7 @@
 
     display: inline-flex;
     align-items: center;
-    gap: $space-s;
+    column-gap: $space-s;
 
     &:hover,
     &:active {
