--- a/src/styles/components/_catalog.scss
+++ b/src/styles/components/_catalog.scss
@@ -9,7 +9,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: $space-l-plus;
+        column-gap: $space-l-plus;
 
         &::before {
             content: '';
@@ -30,13 +30,14 @@
         line-height: $lh-l;
         display: flex;
         align-items: center;
-        gap: $space-s;
+        column-gap: $space-s;
     }
 
     &__controls {
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
-        gap: $space-m;
+        column-gap: $space-m;
 
         &::before {
             content: '';
@@ -55,7 +56,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: $space-l;
+        column-gap: $space-l;
     }
 
 }
