--- a/src/styles/components/_counted-list.scss
+++ b/src/styles/components/_counted-list.scss
@@ -6,6 +6,7 @@
 
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: $space-l-plus;
 
     &__item {
