--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -8,7 +8,7 @@
 
     display: flex;
     align-items: center;
-    gap: $space-s;
+    column-gap: $space-s;
 
     &__button {
         background-color: transparent;
